2008-10-16  Steven G. Kargl  <kargl@gcc.gnu.org>  (tiny patch)

	* amd64fbsd-nat.c (amd64fbsd_supply_pcb): Conditionally compile in
	support for pcb->pcb_{fs,ds,es,gs} on FreeBSD older than 8.0.

2009-10-08  Paul Pluzhnikov  <ppluzhnikov@google.com>

	PR gdb/10457
	* elfread.c (elf_symtab_read): Don't use alloca in a loop.
	
2009-10-06  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Set version to 7.0.0.20091006-cvs.

2009-10-06  Joel Brobecker  <brobecker@adacore.com>

	GDB 7.0 released.

2009-10-06  Joel Brobecker  <brobecker@adacore.com>

	* NEWS: Change "Changes since GDB 6.8" into "Changes in GDB 7.0".

2009-10-06  Joel Brobecker  <brobecker@adacore.com>

	* README: Update GDB version number to 7.0.
	* version.in: Likewise.

2009-10-06  Tristan Gingold  <gingold@adacore.com>

	* darwin-nat.c: Add __TEXT __info_plist content.
	(darwin_attach_pid): Update error message.

2009-10-04  Pedro Alves  <pedro@codesourcery.com>

	* NEWS: Mention non-stop mode.

2009-10-02  H.J. Lu  <hongjiu.lu@intel.com>

	PR gdb/10649
	* Makefile.in (GDB_DATADIR_PATH): Renamed to ...
	(GDB_DATADIR): This.
	(xml-syscall-install): Updated.

2009-10-01  Joel Brobecker  <brobecker@adacore.com>

	* MAINTAINERS: Move Don Lee to the correct section (Write After
	Approval).

2009-10-01  Joel Brobecker  <brobecker@adacore.com>

	* configure.ac: Disable -Werror by default.
	* configure: Regenerate.

2009-09-30  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Set version to 6.8.92.20090930-cvs.

2009-09-30  Joel Brobecker  <brobecker@adacore.com>

	GDB 6.8.92 released.

2009-09-30  Joel Brobecker  <brobecker@adacore.com>

	* README: Update GDB version number to 6.8.92.
	* version.in: Likewise.

2009-09-30  Pierre Muller  <muller@ics.u-strasbg.fr>

	* windows-nat.c (ctrl_c_handler): Also handle CTRL_BREAK_EVENT.

2009-09-29  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* ia64-tdep.c (ia64_convert_from_func_ptr_addr): New variable buf.